Fix class.newInstance() deprecations.